--- a/projects/casio-calculator-picaxe-sensors.html
+++ b/projects/casio-calculator-picaxe-sensors.html
@@ -4,7 +4,7 @@
   <title>Michael Fenton — Picaxe to Casio calculator bi-directional data logger and remote control</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Academic portfolio and CV for Michael Fenton, showcasing innovative teaching, research, talks, workshops, and publications." />
+  <meta name="description" content="Academic portfolio and CV. Michael Fenton pioneered the classroom use of standard FX-9750 graphic calculators into powerful scientific instruments connecting to cheap DIY sensors. Michael invented a reliable and robust Picaxe to Casio calculator bi-directional data logger and remote control system. This upgrades the Casio FX-9750 and FX-9860 graphic calculators to robot remote control units and sensor data display and recording units" />
   <meta name="author" content="Michael Fenton" />
   <meta name="theme-color" content="#151a2f" />
   <link rel="canonical" href="https://MikeFentonNZ.github.io/" />
