--- a/projects/casio-calculator-sensor-upgrade.html
+++ b/projects/casio-calculator-sensor-upgrade.html
@@ -4,7 +4,7 @@
   <title>Michael Fenton — Next generation Casio calculator data logger and remote control</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Academic portfolio and CV for Michael Fenton, showcasing DIY science equipment, talks, workshops, and publications. Next-Generation Calculator Datalogger $10 upgrade - providing equity and accessibility in STEM education." />
+  <meta name="description" content="Academic portfolio and CV for Michael Fenton. Michael Fenton has improved his original Picaxe-to-Casio communication protocols developed and published in the mid-2000s. The updated system transforms the Casio FX-9750GIII so it can sense the real world using Picaxe, ESP8266 or ESP32 microcontrollers. The open-source design encourages teacher customisation and student innovation while providing robust, classroom-tested reliability." />
   <meta name="author" content="Michael Fenton" />
   <meta name="theme-color" content="#151a2f" />
   <link rel="canonical" href="https://MikeFentonNZ.github.io/" />
@@ -79,7 +79,7 @@
     </aside>
     <main id="content" class="content" role="main" tabindex="-1">
       <section class="intro" aria-labelledby="intro-heading">
-        <h2 id="intro-heading">Next-Generation Calculator Datalogger $10 upgrade</h>
+        <h2 id="intro-heading">Next-Generation Calculator Datalogger $10 upgrade</h2>
 	<h3>Providing equity and accessibility in STEM education</h3>
 	<p>Michael Fenton has improved his original Picaxe-to-Casio communication protocols developed and published in the mid-2000s. The updated system transforms the Casio FX-9750GIII so it can sense the real world using Picaxe, ESP8266 or ESP32 microcontrollers. The open-source design encourages teacher customisation and student innovation while providing robust, classroom-tested reliability.</p>
 
@@ -95,11 +95,12 @@
 	<li><strong>Optional wireless bi-directional communication:</strong> Over 200-metre range for remote data collection and remote equipment control. Drive a robot using your calculator!</li>
 	<li><strong>Web-based data sharing option:</strong> Live data served as webpages with graphs accessible on smartphones, tablets, and laptops.</li>
 	<li><strong>Collaborative learning:</strong> Master calculator collects data while entire groups view live results on their own devices.</li>
-	<li><strong>Global connectivity:</strong> WiFi enables worldwide data sharing for international collaborative projects.</strong>
+	<li><strong>Global connectivity:</strong> WiFi enables worldwide data sharing for international collaborative projects.</li>
             <li><strong>Ultra-low-cost sensors: </strong>Works with cheap low-cost DIY / home-made and low-cost sensors; measure range (distance), water vapour, temperature, pressure, alpha radiation, visible light, ultra violet (UV) light, infra red (IR) light, water hardness, salinity, static electric fields, mobile phone signals, angles, magnetic fields, and more.</li>
 	    <li><strong>Democratising STEM Education:</strong> This system fundamentally challenges the traditional model where "fragile" and "expensive" equipment is reserved for senior students.</li>
-	</section>
-<p>Imagine how much more you can engage and inspire Years 9-10 general science classes! no more having students being told to wait to use "the good" equipment, only to loose interest and be turned off science.<p>
+    </ul>
+  </section>
+<p>Imagine how much more you can engage and inspire Years 9-10 general science classes! no more having students being told to wait to use "the good" equipment, only to loose interest and be turned off science.</p>
 
 <p>Where money and resourcing is a barrier to learning, a $10-$15 investment provide access to science equipment normally costing $1000-$4000. In low-decile and resource-limited schools, as well as rural and isolated communities, this is a game changer.</p>
 
@@ -107,7 +108,7 @@
 
 <p>Cross-curricular applications across all of the sciences, mathematics, technology, and physical education. Collect data in a PE lesson, anaylse the data in Biology or Statistics classes. Wonder if that school shade sail REALLY cuts down UV exposure? Record data over lunch, then analyse it in Physics. Explore seasonal changes saving daily recordings and looking for patterns over time in Technology class. How could the shade sail be improved?</p> 
 
-<Use Michael's proven pedagogical framework: The "Build It, Test It, Use It" approach. By constructing their own sensors learners better understand measurement principles. Calibrating equipment teaches the appreciate of data quality considerations.</p>
+<p>Use Michael's proven pedagogical framework: The "Build It, Test It, Use It" approach. By constructing their own sensors learners better understand measurement principles. Calibrating equipment teaches the appreciate of data quality considerations.</p>
 
 <p>Learners design authentic investigations relevant to their own questions and contexts. Learners can readily achieve Relational and Extended abstract levels on the SOLO taxonomy.</p>
 
