--- a/projects/digital-multimeters-as-dataloggers.html
+++ b/projects/digital-multimeters-as-dataloggers.html
@@ -5,7 +5,7 @@
 
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Academic portfolio and CV for Michael Fenton, showcasing innovative teaching, research, talks, workshops, and publications." />
+  <meta name="description" content="Academic portfolio and CV for Michael Fenton. In the mid-2000's Michael pioneered the classroom use of digital multimeters (DMM) as ultra-low cost data logger subsitutes. His 'build it, Test it, Use it' pedagogy makes experimental and hands-on authentic maths, science, and discovery learning accessible to learners of all ages and in resource-limited schools." />
   <meta name="author" content="Michael Fenton" />
   <meta name="theme-color" content="#151a2f" />
   <link rel="canonical" href="https://MikeFentonNZ.github.io/" />
