--- a/projects/rigel-games-electronics-link.html
+++ b/projects/rigel-games-electronics-link.html
@@ -5,7 +5,7 @@
 
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Academic portfolio and CV for Michael Fenton, showcasing innovative teaching, research, talks, workshops, and publications." />
+  <meta name="description" content="Academic portfolio and CV for Michael Fenton. In the mid-2000's Michael invented the Real-world Interactive Games and Electronics Link, recently upgraded to work with Picaxe, ESP8266 and ESP32 microcontrollers. Game design software combines Art and Science in an ultra low-cost, scalable solution to make experimental and hands-on authentic maths, science, and discovery learning accessible to learners of all ages and resource-limited schools.RIGEL can talk, plays games using sensors connected to your body or DIY game controller. It is a home security centre, a science lab, and an industrial measurement and control (robot remote sensing and control) centre." />
   <meta name="author" content="Michael Fenton" />
   <meta name="theme-color" content="#151a2f" />
   <link rel="canonical" href="https://MikeFentonNZ.github.io/" />
