--- a/projects/b9-robot-mobile-laboratory.html
+++ b/projects/b9-robot-mobile-laboratory.html
@@ -5,7 +5,7 @@
 
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Academic portfolio and CV for Michael Fenton, showcasing innovative teaching, research, talks, workshops, and publications." />
+  <meta name="description" content="Academic portfolio and CV for Michael Fenton, using the design and construction of movie props to engage learners in hands-on holistic maths and science lessons that stimulate creativity and imagination. The mobile science lab, Lost in Space robot B9, promotes affordable, inquiry-driven cross-curricula STEM learning in a fun way." />
   <meta name="author" content="Michael Fenton" />
   <meta name="theme-color" content="#151a2f" />
   <link rel="canonical" href="https://MikeFentonNZ.github.io/" />
