--- a/projects/game-design-coding-learning.html
+++ b/projects/game-design-coding-learning.html
@@ -112,7 +112,7 @@
 <img src="../assets/img/game-design.png" alt="'Game design teamwork' Game design teamwork" />
 
 <h3 id="implementation-tips">Implementation tips</h3>
-<p>Start with block-based game engines to teach interface design and basic logic. Begin with teacher-led simple maze game, moving to learnes own additions, personlisation and improvements. Provide examples of static image text-based adventure games (e.g., Apple II 'Transylvania'), side-scrolling, and first-person 3D games. Allow learners to play test examples and choose a genre to develop. Provide /develop sensors that measure changes in resistance, voltage or light to replace keyboard or mouse events.</p><p> Design short, structured worksheets that guide students through building, peer-testing, and adapting their apps to use sensor data. Encourage aesthetic and narrative choices to keep learners engaged and to integrate Arts and Music learning outcomes alongside STEM outcomes.</p>
+<p>Start with block-based game engines to teach interface design and basic logic. Begin with a teacher-led simple maze game, moving to learners own additions, personalisation and improvements. Provide examples of static image text-based adventure games (e.g., Apple II 'Transylvania'), side-scrolling, and first-person 3D games. Allow learners to play test examples and choose a genre to develop. Provide / develop sensors that measure changes in resistance, voltage or light to replace keyboard or mouse events.</p><p> Design short, structured worksheets that guide students through building, peer-testing, and adapting their apps to use sensor data. Encourage aesthetic and narrative choices to keep learners engaged and to integrate Arts and Music learning outcomes alongside STEM outcomes.</p>
 <img src="../assets/img/editor-example2.png" alt="'Game Maker block coding' Block coding example" />
 
 <blockquote><span lang="en">"<strong>'Build it'</strong> Game Maker uses drag and drop block coding and GML coding language. This permits low floor, high ceiling and differentiated learning. </span></blockquote>
@@ -142,7 +142,7 @@
 <img src="../assets/img/michael-fenton-rigel.jpg" alt="'RIGEL app' Real-world Interactive Games and Electronics Link" />
 <br>
 <h3 id="authentic-learning-at-school-and-home">Real-world simulations</h3>
-<p>Older students can take advantage of game machanics and the highly visual nature of games to create fun simulations for Biology, Chemistry, Mathematics and other STEM subjects.</p>
+<p>Older students can take advantage of game mechanics and the highly visual nature of games to create fun simulations for Biology, Chemistry, Mathematics and other STEM subjects.</p>
 
 <img src="../assets/img/michael-fenton-dna-lab-simulator.jpg" alt="'DNA electrophoresis simulator' DNA electrophoresis simulator" />
 
