--- a/projects.html
+++ b/projects.html
@@ -83,20 +83,24 @@
     <main id="content" class="content" role="main" tabindex="-1" aria-label="Research">
       <h2>Projects and Education Research</h2>
       <p>Current lines of inquiry and active studies.</p>
-        <article class="card" aria-labelledby="project2-title">
-          <h4 id="project1-title">Digital Multimeters as Low Cost Dataloggers: Citizen Science and Authentic Cross-curricula Learning</h4>
+        <article class="card" aria-labelledby="project1-title">
+          <h4 id="project1-title">Digital Multimeters as Low Cost Dataloggers: Citizen science and authentic cross-curricula learning</h4>
           <p><a href="projects/digital-multimeters-as-dataloggers.html" aria-label="Link to digital multimeter project details">Link to digital multimeter project details</a></p>
         </article>
         <article class="card" aria-labelledby="project2-title">
           <h4 id="project2-title">Next-Generation Casio Calculator Datalogger for $10. Providing equity and accessibility in STEM education</h4>
           <p><a href="projects/casio-calculator-sensor-upgrade.html" aria-label="Link to Casio and Picaxe project details">Link to Casio FX-9750 graphic calculator $10 data logger project details</a></p>
         </article>
-        <article class="card" aria-labelledby="project2-title">
+        <article class="card" aria-labelledby="project3-title">
           <h4 id="project3-title">Art Meets Science with Digital Technology: The Real-world Interactive Games and Electronics Link</h4>
           <p><a href="projects/rigel-games-electronics-link.html" aria-label="Link to RIGEL project details">Link to RIGEL project details</a></p>
         </article>
-        <article class="card" aria-labelledby="project2-title">
-          <h4 id="project4-title">Movie and TV Props to Engage STEM Learners</h4>
+        <article class="card" aria-labelledby="project4-title">
+          <h4 id="project3-title">Game Design as a Vehicle to Teach STEM: Integrate science, maths, art, and music into real-world projects.</h4>
+          <p><a href="projects/game-design-coding-learning.html" aria-label="Link to game design details">Link to games for STEM details</a></p>
+        </article>
+        <article class="card" aria-labelledby="project5-title">
+          <h4 id="project4-title">The B9 Robot Project: Working, talking, interactive mobile lab to engage STEM learners</h4>
           <p><a href="projects/b9-robot-mobile-laboratory.html" aria-label="Link to B9 robot project details">Link to B9 robot and other props</a></p>
         </article>
       <p> More to be added soon...</p>
