--- a/projects/b9-robot-mobile-laboratory.html
+++ b/projects/b9-robot-mobile-laboratory.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" data-page="home">
 <head>
-  <title>Michael Fenton — B9 Robot: Movie props for authentic STEM learning</title>
+  <title>Michael Fenton — B9 Robot: Working, talking, interactive mobile lab to engage STEM learners</title>
 
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -82,7 +82,7 @@
     </aside>
     <main id="content" class="content" role="main" tabindex="-1">
       <section class="intro" aria-labelledby="intro-heading">
-        <h2 id="intro-heading">Movie and TV props to engage STEM learners</h2>
+        <h2 id="intro-heading">The B9 project: Your walking talking science lab</h2>
 	<p>Michael Fenton is a scientist... he could not have been anything else.</p>
 	<p>Re-runs of Sci-Fi shows from the 60's and 70’s portrayed scientists as handsome heroes. They were fit, athletic, and knew how to save beautiful monsters from ravenous maidens! Science was cool, immensely exciting and called upon the cunning and creativity of its heroes to save the situation. These hereos could travel to the bottom of the sea or the far reachers of space... outdoors was where the science was! Oh, and the wonders you can do with your science knowledge;  you could build fantastic machines, like <a href="https://www.youtube.com/watch?v=n6KUqYupp-Q" target="_blank" aria-label="Thunderirds clip">the Thunderbirds</a>, or the <a href="https://www.youtube.com/watch?v=NH08qh1rKPM" target="_blank" aria-label="Voyage to the Bottom of the Sea clip">the Seaview submarine</a>, or the <a href="https://www.youtube.com/watch?v=oXADhvEqenU" target="_blank" aria-label="Lost in Space clip">Jupiter 2</a> spaceship!</p>
 <p>As a child, Michael always thought that if 9-year-old Bill Mumy's character Will Robinson could repair circuits and think like a scientist, then so could he. Eventually Michael, as a scientist, went on to working with children and teachers, inspiring them to become curious investigators and inventors.</p>
