--- a/projects/casio-calculator-picaxe-sensors.html
+++ b/projects/casio-calculator-picaxe-sensors.html
@@ -150,7 +150,15 @@ use integrals to solve problems”. This includes using Simpson’s rule. Demons
 <div class="video-container">
 <iframe 
         src="https://www.youtube.com/embed/MnuDkM_8Cdg"
-        title="Digital multimeter heat sensor"
+        title="Casio calculator remote controlled robot - CASI"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen>
+</iframe>
+</div>
+<div class="video-container">
+<iframe 
+        src="https://www.youtube.com/embed/GLPgoy_6pYA"
+        title="Casio 9750GIII upgrade using Picaxe and ESP8266 / ESP32 microcontrollers"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
         allowfullscreen>
 </iframe>
