--- a/projects/casio-calculator-sensor-upgrade.html
+++ b/projects/casio-calculator-sensor-upgrade.html
@@ -145,8 +145,8 @@
 	<p>Michael has documented many of his do-it-yourself, low-cost sensors and science equipment in YouTube videos. He is working on more material for this page. For now you can see a demonstration of the "Universal" Casio BASIC program that communicates with Picaxe or ESP8266 or ESP32 sensor units.</p>
 <div class="video-container">
 <iframe 
-        src="https://www.youtube.com/embed/CkqH11ufXJk"
-        title="Next-Generation Casio Datalogger - Michael Fenton"
+        src="https://www.youtube.com/embed/GLPgoy_6pYA"
+        title="Next generation Casio 9750GIII upgrade using Picaxe and ESP8266 / ESP32 microcontrollers to serve sensor data"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
         allowfullscreen>
 </iframe>
