--- a/projects.html
+++ b/projects.html
@@ -100,7 +100,11 @@
           <p><a href="projects/game-design-coding-learning.html" aria-label="Link to game design details">Link to games for STEM details</a></p>
         </article>
         <article class="card" aria-labelledby="project5-title">
-          <h4 id="project4-title">The B9 Robot Project: Working, talking, interactive mobile lab to engage STEM learners</h4>
+          <h4 id="project3-title">Learning Science through making: Maker Science</h4>
+          <p><a href="projects/maker-science-robotics-electronics.html" aria-label="Link to Maker Science details">Link to Maker Science pedagoy</a></p>
+        </article>
+        <article class="card" aria-labelledby="project6-title">
+          <h4 id="project4-title">The B9 Robot Project: Walking, talking, interactive mobile lab to engage STEM learners</h4>
           <p><a href="projects/b9-robot-mobile-laboratory.html" aria-label="Link to B9 robot project details">Link to B9 robot and other props</a></p>
         </article>
       <p> More to be added soon...</p>
