--- a/projects/maker-science-robotics-electronics.html
+++ b/projects/maker-science-robotics-electronics.html
@@ -152,8 +152,8 @@
 
 <h3>Why Maker Science matters</h3>
 <p>In an era where technology pervades every aspect of life, understanding how devices work empowers students beyond career preparation—it builds agency. Michael's students don't just consume technology; they create it, modify it, and use it to answer questions that matter to them.</p><p>
-The pedagogy addresses multiple learning styles: kinesthetic learners manipulate components, visual learners trace circuit diagrams, logical learners debug code, and creative learners design aesthetics and narratives. By integrating arts alongside STEM, Maker Science becomes STEAM—science, technology, engineering, arts, and mathematics in authentic collaboration.</p><p>
-Perhaps most importantly, this approach makes abstract concepts concrete. Voltage isn't just a number in a textbook—it's the force that lights an LED. Temperature isn't just degrees on a thermometer—it's data students collect, graph, and analyze from sensors they've built. Algorithms aren't mysterious computer instructions—they're step-by-step directions students write to solve problems they've identified.</p>
+The pedagogy accomodates different ways of learning: hands-on using components, visual information is presented in circuit diagrams, logical thinking debugs code, and creativity and imagination determines design aesthetics and narratives. By integrating arts alongside STEM, Maker Science becomes STEAM—science, technology, engineering, arts, and mathematics in authentic collaboration.</p><p>
+Perhaps most importantly, this approach makes abstract concepts concrete. Voltage isn't just a number in a textbook — it's the force that lights an LED. Temperature isn't just about reading a thermometer — it's data students collect, graph, and analyze from sensors they've built. Algorithms aren't mysterious computer instructions — they're step-by-step directions students write to solve problems they've identified.</p>
 <img src="../assets/img/michael-fenton-animatronics.jpg" alt="Digital multimeter data logger assembly" width="400" />
 <br>
 	<h3 id="the-bigger-picture">The bigger picture</h3>
