--- a/projects/maker-science-robotics-electronics.html
+++ b/projects/maker-science-robotics-electronics.html
@@ -85,7 +85,7 @@
         <h2 id="intro-heading">Learning Science through making: A pedagogy for all ages.</h2>
 <h3>Where creativity meets circuitry, and inquiry drives innovation</h3>
 	<p>Michael Fenton came to Secondary teaching with research and industry experience.
-	He knew that learning about the world (as Science) requires technology. And new teechnologies require new learning about the world. They are connected.</p>  
+	He knew that learning about the world (as Science) requires technology. And new technologies require new learning about the world. They are connected.</p>  
 <p>Students in Michael's classroom learn about science by becoming scientists. His 'Maker Science' pedagogy is a blended Technology/Science approach that transforms abstract concepts into tangible devices that students build, test, and use to understand the world around them.
 </p>
 <blockquote><span lang="en">At the heart of Michael's pedagogy lies a simple but powerful principle: <strong>Authentic learning happens when students create things that actually work.</strong></span></blockquote>
