--- a/projects/maker-science-robotics-electronics.html
+++ b/projects/maker-science-robotics-electronics.html
@@ -89,8 +89,9 @@
 <p>Students in Michael's classroom learn about science by becoming scientists. His 'Maker Science' pedagogy is a blended Technology/Science approach that transforms abstract concepts into tangible devices that students build, test, and use to understand the world around them.
 </p>
 <blockquote><span lang="en">At the heart of Michael's pedagogy lies a simple but powerful principle: <strong>Authentic learning happens when students create things that actually work.</strong></span></blockquote>
-<p>Rather than memorising formulas or watching demonstrations, students engage with scientific principles by constructing devices that measure, respond, and interact with their environment. This isn't just technology education or science or maths; it's all three, seamlessly integrated through the act of making.
-</p>
+<p>Rather than memorising formulas or watching demonstrations, students engage with scientific principles by constructing devices that measure, respond, and interact with their environment. This isn't just technology education or science or maths; it's all three, seamlessly integrated through the act of making.</p>
+<blockquote><span lang="en">"<strong>The richness of Maker Science: </strong> Invent commercial products, win awards, or become a data detective fact-checking the teacher and textbook concepts. <a href="../files/michael-fenton-keynote.pdf"  target="_blank aria-label="Download talk slides as PDF file">Slides (PDF)</a></blockquote>
+
 <p>As Michael demonstrates through his RIGEL (Real-world Interactive Games and Electronics Link) system, low-cost sensors and microcontrollers can transform classrooms into innovation laboratories. Students don't just code abstract algorithms, they write programs that control traffic lights, measure temperature, detect obstacles, and even create game controllers from exercise bikes.</p>
 <br>
 <img src="../assets/img/michael-fenton-stingray-game.jpg" alt="'Stingray game" width="500" />
@@ -152,7 +153,7 @@
 
 <h3>Why Maker Science matters</h3>
 <p>In an era where technology pervades every aspect of life, understanding how devices work empowers students beyond career preparation—it builds agency. Michael's students don't just consume technology; they create it, modify it, and use it to answer questions that matter to them.</p><p>
-The pedagogy accomodates different ways of learning: hands-on using components, visual information is presented in circuit diagrams, logical thinking debugs code, and creativity and imagination determines design aesthetics and narratives. By integrating arts alongside STEM, Maker Science becomes STEAM—science, technology, engineering, arts, and mathematics in authentic collaboration.</p><p>
+The pedagogy accommodates different ways of learning: hands-on using components, visual information is presented in circuit diagrams, logical thinking debugs code, and creativity and imagination determines design aesthetics and narratives. By integrating arts alongside STEM, Maker Science becomes STEAM—science, technology, engineering, arts, and mathematics in authentic collaboration.</p><p>
 Perhaps most importantly, this approach makes abstract concepts concrete. Voltage isn't just a number in a textbook — it's the force that lights an LED. Temperature isn't just about reading a thermometer — it's data students collect, graph, and analyze from sensors they've built. Algorithms aren't mysterious computer instructions — they're step-by-step directions students write to solve problems they've identified.</p>
 <img src="../assets/img/michael-fenton-animatronics.jpg" alt="Digital multimeter data logger assembly" width="400" />
 <br>
