--- a/projects/maker-science-robotics-electronics.html
+++ b/projects/maker-science-robotics-electronics.html
@@ -5,7 +5,7 @@
 
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Academic portfolio and CV for Michael Fenton. When students walk into Michael Fenton's classroom, they don't just learn about science, they become scientists. Through a blended Technology/Science approach he calls "Maker Science," abstract concepts are transformed into tangible devices that students build, test, and use to understand the world around them." />
+  <meta name="description" content="Academic portfolio and CV for Michael Fenton. When students walk into Michael Fenton's classroom, they don't just learn about science, they become scientists. Through a blended Technology/Science approach he calls 'Maker Science', abstract concepts are transformed into tangible devices that students build, test, and use to understand the world around them." />
   <meta name="author" content="Michael Fenton" />
   <meta name="theme-color" content="#151a2f" />
   <link rel="canonical" href="https://MikeFentonNZ.github.io/" />
@@ -90,13 +90,13 @@
 </p>
 <blockquote><span lang="en">At the heart of Michael's pedagogy lies a simple but powerful principle: <strong>Authentic learning happens when students create things that actually work.</strong></span></blockquote>
 <p>Rather than memorising formulas or watching demonstrations, students engage with scientific principles by constructing devices that measure, respond, and interact with their environment. This isn't just technology education or science or maths; it's all three, seamlessly integrated through the act of making.</p>
-<blockquote><span lang="en">"<strong>The richness of Maker Science: </strong> Invent commercial products, win awards, or become a data detective fact-checking the teacher and textbook concepts. <a href="../files/michael-fenton-keynote.pdf"  target="_blank aria-label="Download talk slides as PDF file">Slides (PDF)</a></blockquote>
+<blockquote><span lang="en">"<strong>The richness of Maker Science: </strong> Invent commercial products, win awards, or become a data detective fact-checking the teacher and textbook concepts. <a href="../files/michael-fenton-keynote.pdf"  target="_blank" aria-label="Download talk slides as PDF file">Slides (PDF)</a></span></blockquote>
 
 <p>As Michael demonstrates through his RIGEL (Real-world Interactive Games and Electronics Link) system, low-cost sensors and microcontrollers can transform classrooms into innovation laboratories. Students don't just code abstract algorithms, they write programs that control traffic lights, measure temperature, detect obstacles, and even create game controllers from exercise bikes.</p>
 <br>
 <img src="../assets/img/michael-fenton-stingray-game.jpg" alt="'Stingray game" width="500" />
 <blockquote><span lang="en">"<strong>Stand by for action!</strong> </span> Game pad controllers made from old plastic lids and LDR's can control games made by other learners. Drive Stringray through narrowing tunnels as you avoid the Terror Fish!</blockquote>
-</p>
+
         <h3 id="key-ideas">Key principles of Maker Science</h3>
 <p>Build it, Test it, Use it.</p>
           <ul>
@@ -244,7 +244,7 @@ The philosophy underlying this work connects to broader educational movements: c
 <br>
 <img src="../assets/img/casio-picaxe-mission-to-mars.jpg" alt="Mission to Mars" />
 
-<You can see this in the Appled Robotics unit here.
+<p>You can see this in the Appled Robotics unit here.</p>
 <br>
 <h3>Example implementation: The Applied Robotics unit</h3>
 <p><strong>Sessions 1-3: </strong>Students explore sensors as analogues to human senses, identify the "sixth sense" (proprioception—spatial awareness), and investigate electricity fundamentals with hands-on multimeter work. They build simple robots from card templates, learning Input-Process-Output principles through construction.</p>
