--- a/projects/casio-calculator-sensor-upgrade.html
+++ b/projects/casio-calculator-sensor-upgrade.html
@@ -83,6 +83,8 @@
 	<h3>Providing equity and accessibility in STEM education</h3>
 	<p>Michael Fenton has improved his original Picaxe-to-Casio communication protocols developed and published in the mid-2000s. The updated system transforms the Casio FX-9750GIII so it can sense the real world using Picaxe, ESP8266 or ESP32 microcontrollers. The open-source design encourages teacher customisation and student innovation while providing robust, classroom-tested reliability.</p>
 
+<p>Michael has identified a method that allows the Casio FX 9750G and FX 9860G calculators to pause indefinitely during a RECEIVE() operation without triggering a COM ERROR. This enables external sensor units to send data at preset intervals (e.g., every 10 seconds, every minute) without requiring specialized hardware such as the EA 200 Data Analyzer, CLAB or E-Con application. Michael's system realises a hundred-fold decrease in cost.</p>
+
 <p>This represents a paradigm shift from "dataloggers are for senior students only" to "every student deserves tools to investigate their world." The system has proven particularly powerful for engaging learners who traditionally see science as abstract and inaccessible, transforming them into confident, curious investigators.</p>
 
 <p>This groundbreaking update to classroom-proven datalogger technology transforms standard FX-9750 and FX-9860 graphic calculators into powerful scientific instruments connecting to cheap DIY sensors. This enhanced system addresses critical equity gaps in STEM education by making authentic experimental learning accessible to junior year levels and low socio-economic communities traditionally excluded from using "expensive" laboratory equipment.</p>
@@ -102,7 +104,7 @@
   </section>
 <p>Imagine how much more you can engage and inspire Years 9-10 general science classes! no more having students being told to wait to use "the good" equipment, only to loose interest and be turned off science.</p>
 
-<p>Where money and resourcing is a barrier to learning, a $10-$15 investment provide access to science equipment normally costing $1000-$4000. In low-decile and resource-limited schools, as well as rural and isolated communities, this is a game changer.</p>
+<p>Where money and resourcing is a barrier to learning, a $6 USD investment provide access to science equipment normally costing $600 or more. In low-decile and resource-limited schools, as well as rural and isolated communities, this is a game changer.</p>
 
 <p>This also opens up opprotunities for data logging equipment and authentic science investigations suitable for home-based and distance learners. Imagine how this could transform Science Fair investigations, with quality data from real world explorations.</p>
 
@@ -139,6 +141,8 @@
 <p>There is no need to calibrate temperature sensors using boiling water. Where in the real world would a student expect to record that temperature? For some reason teachers default to using ice and boiling water to calibrate sensors. If you are investigating cooling curves, YOU should safely get sensor readings at 100 &degC and PROVIDE THIS to learners.</p>
 	<h3 id="use-it">Use it</h3>
 <p>Always remind learners that scientists work carefully and safely, no matter what they see in movies or TV!</p>
+
+<img src="../assets/img/michael-fenton-casio-receive-pause.png" alt="Comparison of Michael's hack." />
 <p> MORE DETAILS WILL FOLLOW - including source code, lesson ideas, and learning materials. If you would like to see Michael's original work with teaching ideas and examples, click the button below.</p>
 	<p><a href="casio-calculator-picaxe-sensors.html" class="button" aria-label="See the original Casio - Picaxe data logger by Michael Fenton">Go to original Casio-Picaxe data logger</a></p>
 	<h3 id="presentations">YouTube videos</h3>
