--- a/projects/casio-calculator-sensor-upgrade.html
+++ b/projects/casio-calculator-sensor-upgrade.html
@@ -83,7 +83,7 @@
 	<h3>Providing equity and accessibility in STEM education</h3>
 	<p>Michael Fenton has improved his original Picaxe-to-Casio communication protocols developed and published in the mid-2000s. The updated system transforms the Casio FX-9750 calculator family so they can sense the real world using Picaxe, ESP8266 or ESP32 microcontrollers. The open-source design encourages teacher customisation and student innovation while providing robust, classroom-tested reliability.</p>
 
-<p>Michael has identified a method that allows the Casio FX 9750G and FX 9860G calculators to pause indefinitely during a RECEIVE() operation without triggering a COM ERROR. This enables external sensor units to send data at preset intervals (e.g., every 10 seconds, every minute) without requiring specialized hardware such as the EA 200 Data Analyzer, CLAB or E-Con application. Michael's system realises a hundred-fold decrease in cost.</p>
+<p>Michael has identified a method that allows the Casio FX 9750G and FX 9860G calculators to pause during a RECEIVE() operation without triggering a COM ERROR. This enables external sensor units to send data at preset intervals (e.g., every 10 seconds, every minute) without requiring specialized hardware such as the EA 200 Data Analyzer, CLAB or E-Con application. Michael's system realises a hundred-fold decrease in cost.</p>
 
 <p>This represents a paradigm shift from "dataloggers are for senior students only" to "every student deserves tools to investigate their world." The system has proven particularly powerful for engaging learners who traditionally see science as abstract and inaccessible, transforming them into confident, curious investigators.</p>
 
